# spack-stack

./: .gitignore  .gitmodules  .readthedocs.yml  .spackstack  README.md  create-env.py  create.py  log.concretize.unified-env.001  project_charter.md  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add_package_request.md  install_request.md  install_request.yaml  install_request.yml
.github/actions/install-mpi/: action.yaml
.github/actions/setup-externals/: action.yaml
.github/actions/setup-os/: action.yaml
.github/parkinglot/: ubuntu-ci-x86_64-gnu.yaml
.github/tmp/: create-spack-mirror.yaml  macos-ci-aarch64.yaml  ubuntu-ci-x86_64-gnu.yaml  ubuntu.yaml
.github/workflows/: concretize.yaml  create-spack-mirror.yaml  gcc-build.yaml  macos-apple-clang.yaml  macos-ci-aarch64-notest.yaml  macos-ci-aarch64.yaml  macos-ci-aarch64.yaml.tmp  macos-ci-x86_64.yaml  macos-clang.yaml  macos-dom.yaml  macos-gcc.yaml  macos-llvm-clang.yaml  macos.yaml  ubuntu-ci-c6a-x86_64-gnu.yaml  ubuntu-ci-c6a-x86_64.yaml  ubuntu-ci-containers-x86_64.yaml  ubuntu-ci-x64_64.yaml  ubuntu-ci-x86_64-gnu-notest.yaml  ubuntu-ci-x86_64-gnu.yaml  ubuntu-ci-x86_64-intel-notest.yaml  ubuntu-ci-x86_64-intel.yaml  ubuntu-ci-x86_64-oneapi.yaml  ubuntu-ci-x86_64.yaml  ubuntu-gcc.yaml  ubuntu-intel.yaml  ubuntu-rnd-x86_64.yaml  ubuntu-setup.yaml  ubuntu.yaml  unit-tests.yaml  util-tests.yaml
TMP/: macos-ci-aarch64.yaml
bootstrap/: bootstrap.sh
bootstrap/templates/: git-lfs  miniconda
configs/apps/: spack.template.yaml
configs/common/: README.md  config.yaml  modules.yaml  modules_lmod.yaml  modules_tcl.yaml  packages.yaml  packages_aocc.yaml  packages_apple-clang.yaml  packages_intel.yaml  packages_oneapi.yaml
configs/containers/: README.intel  README.md  docker-ubuntu-clang-mpich.yaml  docker-ubuntu-gcc  docker-ubuntu-gcc-openmpi.yaml  docker-ubuntu-intel-impi.yaml
configs/repos/: repos.yaml
configs/sites/: README.md
doc/: CMakeLists.txt  requirements.txt
doc/modulefile_templates/: cmake  ecflow  gcc  git-lfs  libfabric  miniconda  mvapich2  mysql  node.js  openmpi  qt
doc/source/: Acronyms.rst  AddingTestPackages.rst  BuildingCode.rst  BuildingContainers.rst  CreatingEnvironments.rst  Documentation.rst  Environments.rst  Glossary.rst  KnownIssues.rst  MaintainersSection.rst  NewSiteConfigs.rst  Overview.rst  Platforms.rst  PreConfiguredSites.rst  Prerequisites.rst  Quickstart.rst  SpackStackExtension.rst  UsingSpackEnvironments.rst  Utilities.rst  conf.py  index.rst
envs/: modules.yaml  packages.yaml  repos.yaml  spack.yaml
meta_modules/: setup_meta_modules.py
meta_modules/templates/: compiler.lua  mpi  mpi.lua
miniconda/: README.md  modulefile_template
util/: check_package_config.py  check_permissions.sh  ldd_check.py  modules_config_check.py  parallel_install.sh  show_duplicate_packages.py  util_tests.sh
util/acorn/: build.pbs  spackinstall.sh
util/test_env/: README  package_check_baseline.txt
util/weekly_build/: 01_DirectorySetup.sh  02_GetSpackStack.sh  04_SpackInstall.sh  05_BuildCache.sh  06_AppTests.sh  07_Cleanup.sh  1_DirectorySetup.sh  2_GetSpackStackDevelop.sh  3_SetupUnifiedEnv.sh  4_SpackInstall.sh  5_BuildCache.sh  6_AppTests.sh  7_Cleanup.sh  README  ShellSetup.sh  SpackStackBuildCache_AllSteps.sh
(+385 files in other folders)
